<resources>
    <string name="app_name">CRAFT</string>
    <string name="title"><![CDATA[Cryptocurrency Regression Analysis & Forecasting Techniques]]></string>
    <string name="new_project">New Project</string>
    <string name="load_project">Load Project</string>
    <string name="help">Help</string>
    <string name="quit">Quit</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="tab_text_1">Data</string>
    <string name="tab_text_2">Graph</string>
    <string name="tab_text_3">Predictions</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="create_new_project">Create New Project</string>
    <string name="X_Title">X (Time)</string>
    <string name="Y_Title">Y (Stock Value in GBP)</string>
    <string name="enter_X">Enter X Value:</string>
    <string name="enter_Y">Enter Y Value:</string>
    <string name="update">Update</string>
    <string name="plot_graph">Plot Graph</string>
    <string name="plus">+</string>
    <string name="manual_data_entry">Manually Enter Data</string>
    <string name="import_data">Import Data From File</string>
    <string name="file">File:</string>
    <string name="path_to_file">Path to File:</string>
    <string name="Linear_OLS_visible">Linear Ordinary Least Squares is Visible</string>
    <string name="Linear_OLS_not_visible">Linear Ordinary Least Squares is Not Visible</string>
    <string name="Linear_OLS_toggle_label">View Linear Ordinary Least Squares Fitting</string>
    <string name="Exponential_OLS_visible">Exponential Ordinary Least Squares is Visible</string>
    <string name="Exponential_OLS_not_visible">Exponential Ordinary Least Squares is Not Visible</string>
    <string name="Exponential_OLS_toggle_label">View Exponential Ordinary Least Squares Fitting</string>
    <string name="help_viewer">Help Viewer</string>
    <string name="realtime_data">Import Real-Time Data from Web</string>
    <string name="URL">API URL</string>
    <string name="save_graph">Save Snapshot of Graph</string>
    <string name="cursor_mode_enabled">Cursor Mode Enabled</string>
    <string name="cursor_mode_disabled">Cursor Mode Disabled</string>
    <string name="enable_cursor_mode">Enable Cursor Mode</string>
    <string name="open">Open...</string>
    <string name="select_coin">Select Coin...</string>

    <string-array name="Coin_Values">
        <item> </item>
        <item>Bitcoin</item>
        <item>Ethereum</item>
        <item>Ripple</item>
        <item>Bitcoin Cash</item>
        <item>EOS</item>
        <item>Litecoin</item>
    </string-array>
</resources>
