<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:hardwareAccelerated="true"
    tools:context=".GraphActivity">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="500dip"></com.jjoe64.graphview.GraphView>

    <Switch
        android:id="@+id/toggleViewLinearOLS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@android:color/holo_red_dark"
        android:checked="false"
        android:splitTrack="false"
        android:text="@string/Linear_OLS_toggle_label"
        android:textColorLink="@android:color/holo_red_dark"
        android:textOff="@string/Linear_OLS_not_visible"
        android:textOn="@string/Linear_OLS_visible" />

    <Switch
        android:id="@+id/toggleViewExponentialOLS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@android:color/holo_red_dark"
        android:checked="false"
        android:splitTrack="false"
        android:text="@string/Exponential_OLS_toggle_label"
        android:textColorLink="@android:color/holo_red_dark"
        android:textOff="@string/Exponential_OLS_not_visible"
        android:textOn="@string/Exponential_OLS_visible" />

    <Switch
        android:id="@+id/toggleViewCursorMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:button="@android:color/holo_red_dark"
        android:checked="false"
        android:splitTrack="false"
        android:text="@string/enable_cursor_mode"
        android:textColorLink="@android:color/holo_red_dark"
        android:textOff="@string/cursor_mode_disabled"
        android:textOn="@string/cursor_mode_enabled" />

    <Button
        android:id="@+id/takeSnapshotButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="requestPermissions"
        android:text="@string/save_graph" />

</LinearLayout>