<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".manualDataEntryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/plotGraphButton"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/X_Title" />

                    <TextView
                        android:id="@+id/textViewY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Y_Title" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editTextX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:accessibilityTraversalAfter="@id/editTextY"
                        android:ems="10"
                        android:hint="@string/enter_X"
                        android:inputType="numberDecimal"
                        android:nextFocusForward="@id/editTextY"
                        android:nextFocusRight="@id/editTextY" />

                    <EditText
                        android:id="@+id/editTextY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/enter_Y"
                        android:inputType="numberDecimal"
                        android:nextFocusDown="@id/addButton" />
                </TableRow>
            </TableLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/addButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="addDataRow"
                    android:text="@string/plus"
                    android:textSize="18sp" />

            </TableRow>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/plotGraphButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="plotGraph"
        android:text="@string/plot_graph"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>